--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@maptiler/geocoding-control": "^2.1.6",
+    "@maptiler/sdk": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
